--- a/tydying Data in R.Rmd
+++ b/tydying Data in R.Rmd
@@ -8,6 +8,7 @@ output: html_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
+Read in libraries
 
 Calling a masked function
 
@@ -26,4 +27,56 @@ catch_df <- read.csv(url("https://knb.ecoinformatics.org/knb/d1/mn/v2/object/df3
                     stringsAsFactors = FALSE)
 head(catch_df)
 ```
+
+
+```{r}
+catch_df %>% 
+  select(Region, Year, Chinook, Sockeye, Coho, Pink, Chum) %>% 
+  head()
+```
+
+```{r}
+catch_df %>% 
+  select(-All, -notesRegCode) %>% 
+  head()
+```
+
+```{r}
+catch_df <- catch_df %>% 
+  select(-All, -notesRegCode)
+  # select the other columns, not All and notesRegCode
+head(catch_df)
+```
+Move from wide to long format (using gather), and rename the cacth column to reflect units
+
+```{r}
+catch_df <- catch_df %>% 
+  gather(key = "species", value = "catch", -Region, -Year) %>% 
+  rename(catch_thousands = catch)
+
+  head(catch_df)
+```
+```{r}
+catch_integers <- as.integer(catch_df$catch_thousands)
+
+i <- which(is.na(catch_integers) == T)
+
+catch_df$catch_thousands[i]
+```
+[1] "I"
+
+1) turn "I" into 1 in the catch_thousands column
+2) covers catch_thousands into integer type
+3) convert catch_thousands to catch
+
+```{r}
+catch_df <- catch_df %>%
+  mutate(catch_thousands = ifelse(catch_thousands == "I", 1, catch_thousands)) %>% 
+  mutate(catch_thousands = as.integer(catch_thousands)) %>% 
+  mutate(catch = catch_thousands * 1000)
+
+tail(catch_df)
+
+```
+
 
