--- a/index.Rmd
+++ b/index.Rmd
@@ -9,22 +9,82 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
+# Packages that will be utilized
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
+```{r}
+suppressPackageStartupMessages({
+  library(leaflet)
+  library(dplyr)
+  library(tidyr)
+  library(ggplot2)
+  library(DT)
+})
 ```
 
-## Including Plots
+# Load salmon data from the KNB
 
-You can also embed plots, for example:
+```{r}
+data_url <- "https://knb.ecoinformatics.org/knb/d1/mn/v2/object/knb.92020.1"
+# data_url <- "https://knb.ecoinformatics.org/knb/d1/mn/v2/object/urn%3Auuid%3Af119a05b-bbe7-4aea-93c6-85434dcb1c5e"
+esc <- tryCatch(
+    read.csv("data/escapement.csv", stringsAsFactors = FALSE),
+    error=function(cond) {
+        message(paste("Escapement file does not seem to exist, so get it from the KNB."))
+        esc <- read.csv(url(data_url, method = "libcurl"), stringsAsFactors = FALSE)
+        return(esc)
+    }
+)
 
-```{r pressure, echo=FALSE}
-plot(pressure)
+head(esc)
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+# Prapare the dataset for calculating medians
+
+```{r}
+median_esc <- esc %>% 
+  separate(sampleDate, c("Year", "Month", "Day"), sep = "-") %>% 
+  group_by(Species, SASAP.Region, Year, Location) %>% 
+  summarize(escapement = sum(DailyCount)) %>% 
+  group_by(Species) %>% 
+  summarize(median_escapement = median(escapement))
+
+head(median_esc)
+```
+# Plot the escapement as a bar chart
+
+```{r}
+ggplot(median_esc, aes(Species, median_escapement)) +
+  # ggplot(file, median_esc; x, median_esc; y, Species) | aes, Aesthetics
+  geom_col() +
+  # bar charts # help, ?geom_
+  coord_flip()
+  # rotate the coordinates
+```
+
+# Now work on building a map
+We are starting from daily data escapement data again, and finding the uique locations at which escapement was measured
+
+# Find unique location point
+Make sure to remember to deal with missing values in the location field
+
+```{r}
+locations <- esc %>% 
+  distinct(Location, Latitude, Longitude) %>% 
+  drop_na()
+# drop all that doesn't have lat. long.
+  datatable(locations)
+```
+
+# Draw the map
+Use leaflet to make interactive map.
+
+```{r}
+leaflet(locations) %>% 
+  addTiles() %>% 
+  # addTiles backgroung 
+  addMarkers(~ Longitude, ~ Latitude, popup = ~ Location)
+  # 
+```
+
+
+
