--- a/index.Rmd
+++ b/index.Rmd
@@ -86,5 +86,17 @@ leaflet(locations) %>%
   # 
 ```
 
+```{r}
+locs <- locations %>% mutate(Longitude = abs(Longitude) * -1)
+
+leaflet(locs) %>% 
+  addTiles() %>% 
+  addMarkers(~ Longitude, ~ Latitude, popup = ~ Location)
+```
+
+
+
+
+
 
 
